// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard should increase the counter 1`] = `
<div
  className="productCard "
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
     +1
  </button>
</div>
`;

exports[`ProductCard should match the snapshot 1`] = `
<div
  className="productCard "
>
  <h1>
    Product Card
  </h1>
</div>
`;
